2010-06-17  Alexis Menard  <alexis.menard@nokia.com>

        Reviewed by Kenneth Rohde Christiansen.

        [Qt] Upstream the WebKit QML integration plugin
        https://bugs.webkit.org/show_bug.cgi?id=40050

        Add to the Qt port the QML WebKit integration plugin.
        QDeclarativeWebView is creating the item and expose
        properties. The C++ API is not public, only the
        properties are.

        * declarative/declarative.pro: Added.
        * declarative/plugin.cpp: Added.
        (WebKitQmlPlugin::registerTypes):
        * declarative/qdeclarativewebview.cpp: Added.
        (QDeclarativeWebViewPrivate::QDeclarativeWebViewPrivate):
        (QDeclarativeWebViewPrivate::):
        (QDeclarativeWebViewPrivate::windowObjectsAppend):
        (GraphicsWebView::GraphicsWebView):
        (GraphicsWebView::mousePressEvent):
        (GraphicsWebView::mouseReleaseEvent):
        (GraphicsWebView::mouseDoubleClickEvent):
        (GraphicsWebView::timerEvent):
        (GraphicsWebView::mouseMoveEvent):
        (QDeclarativeWebView::QDeclarativeWebView):
        (QDeclarativeWebView::~QDeclarativeWebView):
        (QDeclarativeWebView::init):
        (QDeclarativeWebView::componentComplete):
        (QDeclarativeWebView::status):
        (QDeclarativeWebView::progress):
        (QDeclarativeWebView::doLoadStarted):
        (QDeclarativeWebView::doLoadProgress):
        (QDeclarativeWebView::pageUrlChanged):
        (QDeclarativeWebView::doLoadFinished):
        (QDeclarativeWebView::url):
        (QDeclarativeWebView::setUrl):
        (QDeclarativeWebView::preferredWidth):
        (QDeclarativeWebView::setPreferredWidth):
        (QDeclarativeWebView::preferredHeight):
        (QDeclarativeWebView::setPreferredHeight):
        (QDeclarativeWebView::evaluateJavaScript):
        (QDeclarativeWebView::updateDeclarativeWebViewSize):
        (QDeclarativeWebView::initialLayout):
        (QDeclarativeWebView::updateContentsSize):