@@ -1,3 +1,15 @@
+2010-06-17  Robert Hogan  <robert@webkit.org>
+
+        [Qt] Build fix
+
+        Unreviewed.
+
+        Remove includes in qdeclarativewebview*.* that rely on an installation
+        of QtWebKit.
+
+        * declarative/qdeclarativewebview.cpp:
+        * declarative/qdeclarativewebview_p.h:
+
 2010-06-17  Alexis Menard  <alexis.menard@nokia.com>
 
         Reviewed by Kenneth Rohde Christiansen.
